# bakeoffrs

./: .gitignore  Cargo.toml  build.rs  readme.md
proto/: service.proto
src/: main.rs  request_validation.rs  traffic_scanner.rs
