[package]
name = "bakeoffrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
tonic-reflection = "0.4.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
prost = "0.10.4"
catboost2 = "0.1.1+catboost.1.0.5"
deadpool = "0.9.5"
async-trait = "0.1.56"

[build-dependencies]
tonic-build = "0.7.2"